Corrected several small bugs
* reversed a change for Ruby 1.9
* fixed a rounding bug in the My Grades view
* changed the sort order of the School Year so that the most current year is the default

--- a/app/views/evaluations/_summary.html.erb
+++ b/app/views/evaluations/_summary.html.erb
@@ -36,7 +36,8 @@
 
   <% end %>
   <tr><td colspan="3">
-      <%= "Final: #{@course_term.course.grading_scale.calculate_letter_grade(final_score/terms_complete)} (#{(final_score / terms_complete).round}%)" %>
+      Final: <%= terms_complete > 0 ?
+        "#{@course_term.course.grading_scale.calculate_letter_grade(final_score/terms_complete)} (#{(final_score / terms_complete).round}%)" : 'n/a'%>
       <hr />
     </td></tr>
 <% end %>
