Adding Attendance functionality
* Added new course_type flag of Homeroom?
* Added new Evaluation funtionality to handle homeroom course types
* WIP: Report Card attendance table

--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -17,6 +17,9 @@
       <br />
       <%= f.label :grading_scale_id, {}, :class => 'req' %>
       <%= collection_select :course, :grading_scale_id, GradingScale.find(:all), :id, :name %>
+      <br />
+      <%= f.label :course_type_id, {}, :class => 'req' %>
+      <%= collection_select :course, :course_type_id, CourseType.active, :id, :name %>
 
       <div class="spacer">
         <%= f.submit 'Create', :class=> 'btn positive' %>
